<resources>
    <string name="app_name">Экономия на продуктах</string>
    <string name="FirstItem">Product 1</string>
    <string name="SecondItem">Product 1</string>
    <string name="FirstItemWeight">Package weight in grams</string>
    <string name="FirstItemCost">Package price in tenge</string>
    <string name="HundredGrPrice1">Product price 1 per 1 kg</string>
    <string name="HundredGrPrice2">Product price 2 per 1 kg</string>
    <string name="PricePer100">Price</string>
    <string name="Difference">Calculate the difference</string>
    <string name="Delete">Clear</string>
    <string name="TengeRate">₸ = 5.93</string>
    <string name="Welcome">Welcome!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Register">Register</string>
    <string name="Login">Log In</string>
    <string name="Saveongroceries">Save on groceries!</string>
    <string name="Singin">Sing in to continue</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
</resources>