<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WelcomeActivity">

    <FrameLayout
        android:id="@+id/place_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bebas"
        android:text="@string/Welcome"
        android:textColor="#5ACFDD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#F67B30"
        android:elevation="5dp"
        android:fontFamily="@font/bebas"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="#5ACFDD"
        android:elevation="5dp"
        android:fontFamily="@font/bebas"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>