<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputWeigt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/ForText"
        app:helperTextTextColor="@color/ForText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:placeholderTextColor="@color/ForText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditWeight2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ForItems"
            android:hint="@string/FirstItemWeight"
            android:inputType="number"
            android:textColor="@color/ForText"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPrice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/ForText"

        app:helperTextTextColor="@color/ForText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputWeigt2"
        app:placeholderTextColor="@color/ForText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditPrice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ForItems"
            android:hint="@string/FirstItemCost"
            android:inputType="number"
            android:textColor="@color/ForText"
            android:textColorHint="@color/ForText"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:outlineProvider="background"
        app:circularflow_defaultRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/FirstItem"
            android:textColor="@color/ForText"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputWeight1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/ForText"
        app:helperTextTextColor="@color/ForText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:placeholderTextColor="@color/ForText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditWeight1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ForItems"
            android:hint="@string/FirstItemWeight"
            android:inputType="number"
            android:textColor="@color/ForText"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPrice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/ForText"
        app:helperTextTextColor="@color/ForText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputWeight1"
        app:placeholderTextColor="@color/ForText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditPrice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ForItems"
            android:hint="@string/FirstItemCost"
            android:inputType="number"
            android:textColor="@color/ForText"
            android:textColorHint="@color/ForText"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/PricePer100"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPrice1" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/SecondItem"
            android:textColor="@color/ForText"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/PricePer100"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPrice2" />

</androidx.constraintlayout.widget.ConstraintLayout>